target/generated-sources/antlr4/tmp/SmallConcurrencyGrammarParser.java
// Generated from tmp/SmallConcurrencyGrammar.g4 by ANTLR 4.13.1
package tmp;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SmallConcurrencyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, RPAR=2, LBRACE=3, RBRACE=4, COMMA=5, SEMICOLON=6, ASSIGN=7, TRUE=8, 
		FALSE=9, PLUS=10, MINUS=11, MULTIPLY=12, SLASH=13, EQUAL=14, GREATER=15, 
		GREATER_EQUAL=16, LESS=17, LESS_EQUAL=18, DIFFERENT=19, AND=20, OR=21, 
		IF=22, ELSE=23, WHILE=24, RETURN=25, FUNCTION=26, VAR=27, GLOBAL_VAR=28, 
		THREAD=29, LOCK=30, UNLOCK=31, ID=32, NUM=33, NEWLINE=34, WS=35;
	public static final int
		RULE_root = 0, RULE_op = 1, RULE_bop = 2, RULE_rop = 3, RULE_nOprnd = 4, 
		RULE_bOprnd = 5, RULE_binOP = 6, RULE_relOp = 7, RULE_arithmExp = 8, RULE_boolExp = 9, 
		RULE_expr = 10, RULE_returnStatement = 11, RULE_exprList = 12, RULE_funcCall = 13, 
		RULE_assignStatement = 14, RULE_statement = 15, RULE_ifStatement = 16, 
		RULE_whileStatement = 17, RULE_sequence = 18, RULE_paramList = 19, RULE_funcDef = 20, 
		RULE_varDecl = 21, RULE_globalVarDecl = 22, RULE_threadDecl = 23, RULE_lockVarDecl = 24, 
		RULE_unlockVarDecl = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "op", "bop", "rop", "nOprnd", "bOprnd", "binOP", "relOp", "arithmExp", 
			"boolExp", "expr", "returnStatement", "exprList", "funcCall", "assignStatement", 
			"statement", "ifStatement", "whileStatement", "sequence", "paramList", 
			"funcDef", "varDecl", "globalVarDecl", "threadDecl", "lockVarDecl", "unlockVarDecl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "','", "';'", "'='", "'True'", "'False'", 
			"'+'", "'-'", "'*'", "'/'", "'=='", "'>'", "'>='", "'<'", "'<='", "'!='", 
			"'and'", "'or'", "'if'", "'else'", "'while'", "'return'", "'function'", 
			"'var'", "'gVar'", "'thread'", "'lock'", "'unlock'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAR", "RPAR", "LBRACE", "RBRACE", "COMMA", "SEMICOLON", "ASSIGN", 
			"TRUE", "FALSE", "PLUS", "MINUS", "MULTIPLY", "SLASH", "EQUAL", "GREATER", 
			"GREATER_EQUAL", "LESS", "LESS_EQUAL", "DIFFERENT", "AND", "OR", "IF", 
			"ELSE", "WHILE", "RETURN", "FUNCTION", "VAR", "GLOBAL_VAR", "THREAD", 
			"LOCK", "UNLOCK", "ID", "NUM", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SmallConcurrencyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SmallConcurrencyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SmallConcurrencyGrammarParser.EOF, 0); }
		public List<GlobalVarDeclContext> globalVarDecl() {
			return getRuleContexts(GlobalVarDeclContext.class);
		}
		public GlobalVarDeclContext globalVarDecl(int i) {
			return getRuleContext(GlobalVarDeclContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(SmallConcurrencyGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SmallConcurrencyGrammarParser.SEMICOLON, i);
		}
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GLOBAL_VAR) {
				{
				{
				setState(52);
				globalVarDecl();
				setState(53);
				match(SEMICOLON);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				funcDef();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNCTION );
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(SmallConcurrencyGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SmallConcurrencyGrammarParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(SmallConcurrencyGrammarParser.MULTIPLY, 0); }
		public TerminalNode SLASH() { return getToken(SmallConcurrencyGrammarParser.SLASH, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpContext op() throws RecognitionException {
		OpContext _localctx = new OpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BopContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(SmallConcurrencyGrammarParser.EQUAL, 0); }
		public TerminalNode GREATER() { return getToken(SmallConcurrencyGrammarParser.GREATER, 0); }
		public TerminalNode GREATER_EQUAL() { return getToken(SmallConcurrencyGrammarParser.GREATER_EQUAL, 0); }
		public TerminalNode LESS() { return getToken(SmallConcurrencyGrammarParser.LESS, 0); }
		public TerminalNode LESS_EQUAL() { return getToken(SmallConcurrencyGrammarParser.LESS_EQUAL, 0); }
		public TerminalNode DIFFERENT() { return getToken(SmallConcurrencyGrammarParser.DIFFERENT, 0); }
		public BopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterBop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitBop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitBop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BopContext bop() throws RecognitionException {
		BopContext _localctx = new BopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1032192L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RopContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(SmallConcurrencyGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(SmallConcurrencyGrammarParser.OR, 0); }
		public RopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterRop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitRop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitRop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RopContext rop() throws RecognitionException {
		RopContext _localctx = new RopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NOprndContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SmallConcurrencyGrammarParser.ID, 0); }
		public TerminalNode NUM() { return getToken(SmallConcurrencyGrammarParser.NUM, 0); }
		public NOprndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nOprnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterNOprnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitNOprnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitNOprnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NOprndContext nOprnd() throws RecognitionException {
		NOprndContext _localctx = new NOprndContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nOprnd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BOprndContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(SmallConcurrencyGrammarParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(SmallConcurrencyGrammarParser.FALSE, 0); }
		public List<NOprndContext> nOprnd() {
			return getRuleContexts(NOprndContext.class);
		}
		public NOprndContext nOprnd(int i) {
			return getRuleContext(NOprndContext.class,i);
		}
		public BopContext bop() {
			return getRuleContext(BopContext.class,0);
		}
		public BOprndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bOprnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterBOprnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitBOprnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitBOprnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BOprndContext bOprnd() throws RecognitionException {
		BOprndContext _localctx = new BOprndContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bOprnd);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(TRUE);
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(FALSE);
				}
				break;
			case ID:
			case NUM:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				nOprnd();
				setState(78);
				bop();
				setState(79);
				nOprnd();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BinOPContext extends ParserRuleContext {
		public List<NOprndContext> nOprnd() {
			return getRuleContexts(NOprndContext.class);
		}
		public NOprndContext nOprnd(int i) {
			return getRuleContext(NOprndContext.class,i);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public BinOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binOP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterBinOP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitBinOP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitBinOP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinOPContext binOP() throws RecognitionException {
		BinOPContext _localctx = new BinOPContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_binOP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			nOprnd();
			setState(84);
			op();
			setState(85);
			nOprnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelOpContext extends ParserRuleContext {
		public List<BOprndContext> bOprnd() {
			return getRuleContexts(BOprndContext.class);
		}
		public BOprndContext bOprnd(int i) {
			return getRuleContext(BOprndContext.class,i);
		}
		public RopContext rop() {
			return getRuleContext(RopContext.class,0);
		}
		public RelOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterRelOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitRelOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitRelOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelOpContext relOp() throws RecognitionException {
		RelOpContext _localctx = new RelOpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			bOprnd();
			setState(88);
			rop();
			setState(89);
			bOprnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithmExpContext extends ParserRuleContext {
		public BinOPContext binOP() {
			return getRuleContext(BinOPContext.class,0);
		}
		public NOprndContext nOprnd() {
			return getRuleContext(NOprndContext.class,0);
		}
		public ArithmExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterArithmExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitArithmExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitArithmExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmExpContext arithmExp() throws RecognitionException {
		ArithmExpContext _localctx = new ArithmExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arithmExp);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				binOP();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				nOprnd();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolExpContext extends ParserRuleContext {
		public RelOpContext relOp() {
			return getRuleContext(RelOpContext.class,0);
		}
		public BOprndContext bOprnd() {
			return getRuleContext(BOprndContext.class,0);
		}
		public BoolExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterBoolExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitBoolExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitBoolExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolExpContext boolExp() throws RecognitionException {
		BoolExpContext _localctx = new BoolExpContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_boolExp);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				relOp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				bOprnd();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ArithmExpContext arithmExp() {
			return getRuleContext(ArithmExpContext.class,0);
		}
		public BoolExpContext boolExp() {
			return getRuleContext(BoolExpContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				arithmExp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				boolExp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(SmallConcurrencyGrammarParser.RETURN, 0); }
		public ArithmExpContext arithmExp() {
			return getRuleContext(ArithmExpContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(RETURN);
			setState(104);
			arithmExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprListContext extends ParserRuleContext {
		public ArithmExpContext arithmExp() {
			return getRuleContext(ArithmExpContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SmallConcurrencyGrammarParser.COMMA, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmallConcurrencyGrammarListener ) ((SmallConcurrencyGrammarListener)listener).exitExprList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmallConcurrencyGrammarVisitor ) return ((SmallConcurrencyGrammarVisitor<? extends T>)visitor).visitExprList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_exprList);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				arithmExp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				arithmExp();
				setState(108);
				match(COMMA);
				setState(109);
				exprList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
